2004-10-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkicontheme.c (gtk_icon_theme_has_icon): Implement for
	cached themes.

	* gtk/gtkiconcache.h: 
	* gtk/gtkiconcache.c (_gtk_icon_cache_has_icon): New function.

	* gtk/updateiconcache.c (scan_directory): Don't skip .icon 
	files which are listed before their images.
	(foreach_remove_func): Instead filter lonely .icon files out
	here.

	* gtk/gtkicontheme.c (theme_dir_get_icon_suffix): Filter out
	the HAS_ICON_FILE flag.

2004-10-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconcache.c: Make it compile without mmap() and
	add some more checks.  (#155973, Morten Welinder)

	Add convenience api for image dnd (#150165):
	
	* gtk/gtkselection.h: 
	* gtk/gtkselection.c (gtk_target_list_add_image_targets) 
	(gtk_selection_data_set_pixbuf, gtk_selection_data_get_pixbuf): 
	New functions to handle the image formats readable/writable 
	by gdk-pixbuf. 
	
	* gtk/gtkdnd.h: 
	* gtk/gtkdnd.c (gtk_drag_dest_add_image_targets) 
	(gtk_drag_source_add_text_targets): New functions to handle
	the image formats readable/writable by gdk-pixbuf. 

2004-10-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_new): Make
	the code clearer.  (#155239, Murray Cumming)

	* gtk/gtkicontheme.c: Small fixes.

	* gtk/gtkrc.c: Include gtkmodules.h.  (#155885, Kazuki IWAMOTO)

	* gtk/gtktoolbar.h: Add _gtk_toolbar_rebuild_menu(). (#155885)

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_class_init): 
	Fix a wrong blurb.  (#155838, Morten Welinder)

2004-10-19  Matthias Clasen  <mclasen@redhat.com>

	Implement icon theme caching.  (#154034, Martijn Vernooij,
	caching schema proposed by Owen Taylor, initial implementation
	by Anders Carlsson)
	
	* gtk/gtkdebug.h: 
	* gtk/gtkmain.c: Add a "icontheme" debug flag.

	* gtk/Makefile.am (gtk_c_sources): Add gtkiconcache.c
	(gtk_private_h_sources): Add gtkiconcache.h
	(bin_PROGRAMS): Add gtk-update-icon-cache
